--- a/package.json
+++ b/package.json
@@ -8,8 +8,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
+    "gray-matter": "^4.0.3",
     "next": "^10.0.0",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^6.7.0",
     "react": "17.0.1",
     "react-dom": "17.0.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^9",
+    "postcss": "^7",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   }
 }
